[gd_scene load_steps=10 format=3 uid="uid://dc2xsao7grqqb"]

[ext_resource type="Script" uid="uid://bea3mliiq5owp" path="res://scripts/trampoline_2.gd" id="1_2b563"]
[ext_resource type="Texture2D" uid="uid://c8eobj7ix6w18" path="res://assets/sprites/spring.png" id="2_y0bit"]
[ext_resource type="Texture2D" uid="uid://cdswrcbx02ri0" path="res://assets/sprites/spring_out.png" id="3_myli1"]
[ext_resource type="AudioStream" uid="uid://d1s26eki0ltt6" path="res://assets/sounds/sfx_funny_boing_pixabay.mp3" id="4_2b563"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5gay0"]
atlas = ExtResource("2_y0bit")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_64cc3"]
atlas = ExtResource("3_myli1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oqe70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gay0")
}],
"loop": true,
"name": &"trampoline_immobile",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64cc3")
}],
"loop": true,
"name": &"trampoline_ouvert",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gay0"]
size = Vector2(56, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64cc3"]
size = Vector2(56, 60)

[node name="Trampoline2" type="Area2D"]
script = ExtResource("1_2b563")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oqe70")
animation = &"trampoline_ouvert"

[node name="CollisionShape2D_immobile" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_5gay0")

[node name="CollisionShape2D_ouvert" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_64cc3")

[node name="SonTrampoline" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2b563")
